--- a/first_test.ipynb
+++ b/first_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "22eb2419",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "id": "7449a198",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "id": "74770efe",
    "metadata": {},
    "outputs": [
@@ -69,18 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "5b09e1b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train': <torch.utils.data.dataloader.DataLoader at 0x1e9b36fb9a0>,\n",
-       " 'test': <torch.utils.data.dataloader.DataLoader at 0x1e9b36fba60>}"
+       "{'train': <torch.utils.data.dataloader.DataLoader at 0x24489b49130>,\n",
+       " 'test': <torch.utils.data.dataloader.DataLoader at 0x24489b49220>}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,11 +103,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
+   "id": "74d178f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#batch_size = 64\n",
+    "\n",
+    "# Create data loaders.\n",
+    "#train_dataloader = DataLoader(train_data, batch_size=batch_size)\n",
+    "#test_dataloader = DataLoader(test_data, batch_size=batch_size)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "eaf7ec73",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
+    "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
     "class NormalNN(torch.nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -127,20 +145,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "75e2426a",
    "metadata": {},
    "outputs": [],
    "source": [
     "model = NormalNN()\n",
+    "#print (model)\n",
     "\n",
-    "criterion = torch.nn.CrossEntropyLoss()"
+    "criterion = torch.nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=1e-3)\n",
+    "#print (optimizer)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "043918fc",
+   "id": "54c12bf7",
    "metadata": {},
    "outputs": [],
    "source": []
